# poke

./: .cursorrules  .gitignore  PHASE1_README.md  PHASE2_README.md  PHASE3_README.md  PHASE4_README.md  auth-prd.md  backend-architecture.md  card_names.csv  certbot-init.sh  certbot-renew.sh  docker-compose.yml  env.example  frontend-architecture.md  generate-certs.sh  image_similarity.py  nginx-challenge.conf  nginx-dev.conf  nginx-https.conf  nginx-prod.conf  nginx.conf  ocr.py  package-lock.json  package.json  pokemon-api.py  pyproject.toml  requirements.txt  run-backend.sh  test-production.sh
backend/: .dockerignore  Dockerfile  README.md  api.py  auth_middleware.py  image_similarity.py  index.html  main.py  migrations.py  pyproject.toml  requirements.txt  supertokens_config.py
backend/src/components/: CardDetails.tsx
backend/src/types/: card.ts
backend/src/utils/: imageUtils.ts
frontend/: .env.development  .env.production  env.example  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: CameraCapture.tsx  CardDetails.tsx  LibraryCardDetails.tsx
frontend/src/components/auth/: ProtectedRoute.tsx  SignIn.tsx  UserProfile.tsx
frontend/src/config/: supertokens.ts  supertokens.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Auth.tsx  Index.tsx  Library.tsx
frontend/src/services/: cardApi.ts
frontend/src/types/: card.ts
frontend/src/utils/: imageUtils.ts
src/: App.tsx
src/components/: CameraCapture.tsx  CardDetails.tsx
src/pages/: Index.tsx
src/services/: cardApi.ts
