[project]
name = "pokemon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.116.1",
    "huggingface-hub>=0.33.4",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "pokemontcgsdk>=3.4.0",
    "requests>=2.32.4",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
    "uvicorn>=0.27.1",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.1.0",
    "numpy>=2.3.1",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "supertokens-python>=0.30.0",
]


